--- a/settings.ini
+++ b/settings.ini
@@ -1,18 +1,18 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = {lib_name}
+lib_name = test_nbdev
 # For Enterprise Git add variable repo_name and company name
-# repo_name = analytics
-# company_name = nike
+repo_name = test_nbdev
+company_name = teddyxiong53
 
-user = {user}
-# description = A description of your project
-# keywords = some keywords
-author = {author}
-author_email = {author_email}
+user = teddyxiong53
+description = test nbdev
+keywords = fastai nbdev
+author = teddyxiong53
+author_email = 1073167306@qq.com
 # copyright = Put your copyright information here
-branch = {branch}
+branch = master
 version = 0.0.1
 min_python = 3.6
 audience = Developers
