add first function

--- a/settings.ini
+++ b/settings.ini
@@ -11,7 +11,7 @@ description = test nbdev
 keywords = fastai nbdev
 author = teddyxiong53
 author_email = 1073167306@qq.com
-# copyright = Put your copyright information here
+copyright = Put your copyright information here
 branch = master
 version = 0.0.1
 min_python = 3.6
